# synthetic-pointer-example

./: Cargo.toml  touch_data.capnp
src/: main.rs  touch_data_capnp.rs
